# dbplus

./: .gitignore  API.md  DESIGN_SYSTEM.md  DRIVER_INTEGRATION_PLAN.md  QUERY_EDITOR_ROADMAP.md  QUERY_HISTORY_FIX.md  README.md  RELEASE.md  SAVED_QUERY_FIX.md  SCHEMA_DIFF_PLAN.md  SHORTCUT_GUIDE.md  TEST_SAVED_QUERIES.md  UX_UI_COMPLETE_SUMMARY.md  UX_UI_ITERATION_2.md  UX_UI_ITERATION_3.md  UX_UI_ITERATION_4.md  UX_UI_OPTIMIZATION.md  from-completion.patch  implementation_plan.md  package.json  pnpm-lock.yaml  task.md  test_database_management_api.sh  test_history_api.sh  test_snippets_api.sh
.serena/: project.yml
backend/: .env.example  BACKEND_INVESTIGATION.md  Cargo.toml  output.txt
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20240101_000002_add_metadata.rs  m20240101_000003_create_dashboards.rs  m20250101_000004_create_snippets.rs  m20251213_000005_saved_query_folders.rs  m20251215_000006_sqlite_attached_dbs.rs  m20251216_000007_create_user_settings.rs  m20251216_000008_add_snippet_variables.rs  m20251217_000009_add_connection_advanced_fields.rs  m20251217_000010_add_connection_environment.rs  m20251219_000011_schema_cache.rs  m20251220_000012_create_saved_filters.rs  m20251222_000013_add_connection_status_and_tags.rs
backend/src/: app_state.rs  lib.rs  main.rs
backend/src/config/: database.rs  mod.rs
backend/src/handlers/: autocomplete.rs  connection.rs  connection_test_by_id.rs  dashboard.rs  data_tools.rs  database.rs  explain.rs  export_ddl.rs  extensions.rs  foreign_key.rs  history.rs  mock_data.rs  mod.rs  query.rs  query_stream.rs  result_edit.rs  saved_filter.rs  saved_query.rs  saved_query_folder.rs  schema.rs  schema_diff.rs  schema_refresh.rs  search.rs  settings.rs  snippet.rs  sqlite_tools.rs  table_info.rs
backend/src/models/: export_ddl.rs  mod.rs
backend/src/models/entities/: connection.rs  dashboard.rs  dashboard_chart.rs  mod.rs  query_history.rs  query_snippet.rs  saved_filter.rs  saved_query.rs  saved_query_folder.rs  schema_cache.rs  sqlite_attached_db.rs  user_settings.rs
backend/src/routes/: api.rs
backend/src/services/: connection_service.rs  credential_service.rs  dashboard_service.rs  db_driver.rs  ddl_generator.rs  encryption_service.rs  history_service.rs  mod.rs  pg_dump.rs  postgres_driver.rs  saved_filter_service.rs  saved_query_folder_service.rs  saved_query_service.rs  snippet_service.rs
backend/src/services/autocomplete/: engine.rs  mod.rs  parser.rs  parser_test.rs  quick_test.rs  schema_cache.rs  test_user_query.rs
backend/src/services/clickhouse/: mod.rs
backend/src/services/connection_service/: connection_ops.rs  database_ops.rs  function_ops.rs  mod.rs  query_ops.rs  schema_diff_ops.rs  schema_ops.rs  session_ops.rs  table_ops.rs  table_ops_placeholder.rs  view_ops.rs
backend/src/services/couchbase/: capabilities.rs  connection.rs  management.rs  mod.rs  query.rs  schema.rs  table.rs
backend/src/services/driver/: INTERFACE_GUIDE.md  README.md  base.rs  capabilities.rs  column.rs  ddl_export.rs  extension.rs  function.rs  mod.rs  nosql.rs  schema.rs  session.rs  table.rs  traits.rs  view.rs
backend/src/services/mock_data/: generator.rs  mod.rs  service.rs
backend/src/services/mongo/: connection.rs  management.rs  mod.rs  query.rs  schema.rs
backend/src/services/mysql/: column.rs  connection.rs  ddl_export.rs  function.rs  mod.rs  query.rs  schema.rs  table.rs  view.rs
backend/src/services/postgres/: column.rs  connection.rs  ddl_export.rs  foreign_key.rs  function.rs  mod.rs  query.rs  schema.rs  session.rs  table.rs  view.rs
backend/src/services/schema_diff/: differ.rs  extractor.rs  generator.rs  mod.rs  postgres_extractor.rs
backend/src/services/sqlite/: column.rs  connection.rs  ddl_export.rs  function.rs  mod.rs  query.rs  schema.rs  table.rs  view.rs
backend/src/utils/: mod.rs  pg_dump_finder.rs  request.rs  sql_parser.rs  sql_script.rs  validators.rs
docs/: API.md  AUTOCOMPLETE_SUMMARY.md  COLUMN_AUTOCOMPLETE_FIX.md  CSS_IMPROVEMENTS_SUMMARY.md  CSS_SIZE_AUDIT.md  CURRENT_STATUS.md  DDL_EXPORT_DRIVER_PLAN.md  DEBUG_AUTOCOMPLETE.md  DEBUG_EMPTY_SUGGESTIONS.md  DEBUG_ROW_COUNT.md  DEBUG_SAVED_QUERIES.md  DESIGN_SYSTEM.md  DESIGN_SYSTEM_GRUVBOX.md  DUPLICATE_HISTORY_FIX.md  FINAL_FIX_AUTOCOMPLETE.md  NEXT_STEPS_DEBUG.md  PERFORMANCE_OPTIMIZATION.md  PHASE10_SECURITY_AUDIT.md  PHASE10_VERIFICATION.md  PHASE12_QUERY_EDITOR_PLAN.md  PHASE13_SCHEMA_NAV_PLAN.md  POSTGRES_TYPE_FIX.md  QUERY_EDITOR_ROADMAP.md  QUERY_HISTORY_COMPLETE.md  QUERY_HISTORY_IMPLEMENTATION.md  README.md  SCHEMA_DIFF_SCOPE.md  SCHEMA_TABLE_AUTOCOMPLETE.md  SIDECAR_CONFIG.md  SILENT_BACKEND_SUMMARY.md  TABLE_SUGGESTIONS_FIX.md  TEST_EXACT_PAYLOAD.md  UNICODE_FIX.md  UX_UI_ITERATION_5.md  WHY_ONLY_FUNCTIONS.md  couchbase-driver.md  couchbase-web-console-master-prompt.md  couchbase.md  editor-settings-integration.md  er-diagram-checklist.md  (+11 more)
frontend/: CONTRAST_ANALYSIS.md  CONTRAST_SUMMARY.md  QUERY_RESULTS_CONTRAST_FIX.md  README.md  SELECTION_TEXT_FIX.md  TABLE_STATS_FIX.md  THEME_COLORS_REFERENCE.md  UI_IMPROVEMENTS.md  index.html  package-lock.json  package.json  pad_icon.py  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: commands.rs  lib.rs  main.rs
frontend/src-tauri/src/commands/: autocomplete.rs  connection.rs  dashboards.rs  data_tools.rs  database.rs  export_ddl.rs  extensions.rs  history.rs  mock_data.rs  mod.rs  query.rs  result_edit.rs  saved_queries.rs  schema.rs  schema_diff.rs  search.rs  session.rs  settings.rs  snippets.rs  sqlite_tools.rs  table_info.rs  table_ops.rs
scripts/: phase10_verify.sh
(+216 files in other folders)
