[package]
name = "dbplus-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Embedded web server (localhost only)
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sea-orm = { version = "0.12", features = [
    "sqlx-sqlite",
    "runtime-tokio-native-tls",
    "macros",
] }
tokio-postgres = { version = "0.7", features = [
    "with-uuid-1",
    "with-chrono-0_4",
    "with-serde_json-1",
] }
postgres-types = { version = "0.2", features = [
    "with-serde_json-1",
    "with-chrono-0_4",
    "with-uuid-1",
] }
postgres-protocol = "0.6"
deadpool-postgres = "0.13"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls"] }
migration = { path = "migration" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Security
ring = "0.17"
base64 = "0.22"

# Utilities
uuid = { version = "1.0", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.33", features = ["serde", "db-tokio-postgres"] }
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
dotenvy = "0.15"
bytes = "1"
futures-util = "0.3"
tokio-stream = "0.1"
# Ensure regex builds with std enabled for transitive deps (sea-orm-cli)
regex = "1.11"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
fake = "4.4.0"
rand = "0.9.2"
sqlparser = "0.43"

[workspace]
members = [".", "migration"]

# Windows-specific configuration to hide console window
[[bin]]
name = "dbplus-backend"
path = "src/main.rs"

[profile.release]
# Optimize for size and performance
opt-level = 3
lto = true
codegen-units = 1
strip = true

# Hide console window on Windows when running as sidecar
[target.'cfg(windows)'.build-dependencies]

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
